--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      setTimeout(() => {
+        if (window.location.pathname === '/' || window.location.pathname === '') {
+          console.log('Explicitly redirected via javscript', window.location.pathname);
+          window.location = '/league';
+        }
+      }, 1000);
+    </script>
   </body>
 </html>
